feat: 默认启用 Hardware Flow Offloading
- 在 config/360t7.config 中添加 kmod-ipt-offload 内核模块支持
- 创建 scripts/setup-flow-offloading.sh 脚本，仅启用 Hardware Flow Offloading
- 在构建流程中集成 flow offloading 设置步骤
- 不修改防火墙的其他配置，只设置 flow_offloading_hw 选项

--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -116,7 +116,10 @@ jobs:
     - name: Setup Chinese Locale
       run: |
         bash ../scripts/setup-chinese-locale.sh openwrt
-    - name: Make Defconfig (after locale setup)
+    - name: Setup Flow Offloading
+      run: |
+        bash ../scripts/setup-flow-offloading.sh openwrt
+    - name: Make Defconfig (after setup)
       run: |
         cd openwrt
         make defconfig
