--- a/config/360t7.config
+++ b/config/360t7.config
@@ -27,6 +27,7 @@ CONFIG_PACKAGE_iperf3=y
 # CONFIG_PACKAGE_kmod-mac80211 is not set
 # CONFIG_PACKAGE_kmod-mt7915e is not set
 # CONFIG_PACKAGE_kmod-mt7981-firmware is not set
+CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libiperf3=y
