fix: 修复脚本路径并包含 rootfs 文件到 release
- 修复 setup-chinese-locale.sh 和 setup-flow-offloading.sh 的路径（从 ../scripts/ 改为 ./scripts/）
- 在 Organize files 步骤中添加 rootfs 文件（*rootfs*.tar.gz）到 artifact
- 确保所有构建产物（固件、rootfs、config.buildinfo、sha256sums）都被上传到 release page

--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -144,9 +144,20 @@ jobs:
       run: |
         rm -rf ./artifact/
         mkdir -p ./artifact/
-        mv openwrt/bin/targets/mediatek/filogic/*wrt* ./artifact/
-        mv openwrt/bin/targets/mediatek/filogic/config.buildinfo ./artifact/
+        BUILD_DIR="openwrt/bin/targets/mediatek/filogic"
+        # 移动固件镜像文件 (*wrt*)
+        if ls ${BUILD_DIR}/*wrt* 1> /dev/null 2>&1; then
+          mv ${BUILD_DIR}/*wrt* ./artifact/ 2>/dev/null || true
+        fi
+        # 移动 rootfs 文件 (*rootfs*.tar.gz)
+        if ls ${BUILD_DIR}/*rootfs*.tar.gz 1> /dev/null 2>&1; then
+          mv ${BUILD_DIR}/*rootfs*.tar.gz ./artifact/ 2>/dev/null || true
+        fi
+        # 移动其他可能需要的文件
+        [ -f ${BUILD_DIR}/config.buildinfo ] && mv ${BUILD_DIR}/config.buildinfo ./artifact/ 2>/dev/null || true
+        [ -f ${BUILD_DIR}/sha256sums ] && mv ${BUILD_DIR}/sha256sums ./artifact/ 2>/dev/null || true
         cd ./artifact/
+        echo "已包含的文件："
         ls -Ahl
     - name: Upload artifact
       uses: actions/upload-artifact@main
