feat: 添加 LuCI 中文语言包
- luci-i18n-base-zh-cn (基础界面)
- luci-i18n-firewall-zh-cn (防火墙)
- luci-i18n-package-manager-zh-cn (包管理器)

--- a/config/packages.conf
+++ b/config/packages.conf
@@ -33,6 +33,13 @@ PACKAGES_RPCD="
     rpcd-mod-ucode
 "
 
+# 中文语言包
+PACKAGES_LANG_ZH="
+    luci-i18n-base-zh-cn
+    luci-i18n-firewall-zh-cn
+    luci-i18n-package-manager-zh-cn
+"
+
 # 系统工具
 PACKAGES_TOOLS="
     btop
@@ -69,7 +76,7 @@ PACKAGES_DISABLED="
 
 # 获取所有要安装的包（合并并清理空行）
 get_install_packages() {
-    echo "$PACKAGES_LUCI $PACKAGES_RPCD $PACKAGES_TOOLS $PACKAGES_EXTRA" | tr '\n' ' ' | sed 's/#[^"]*//g' | tr -s ' '
+    echo "$PACKAGES_LUCI $PACKAGES_RPCD $PACKAGES_LANG_ZH $PACKAGES_TOOLS $PACKAGES_EXTRA" | tr '\n' ' ' | sed 's/#[^"]*//g' | tr -s ' '
 }
 
 # 获取所有要禁用的包
