feat: 添加 ttyd Web 终端支持
- ttyd: Web 终端服务，可以通过浏览器访问 SSH 终端
- luci-app-ttyd: ttyd 的 LuCI 管理界面
- 支持在 360t7.config 和 packages.conf 中配置

--- a/config/packages.conf
+++ b/config/packages.conf
@@ -44,7 +44,13 @@ PACKAGES_LANG_ZH="
 PACKAGES_TOOLS="
     btop
     iperf3
+    ttyd
     zsh
+"
+
+# LuCI 应用
+PACKAGES_LUCI_APPS="
+    luci-app-ttyd
 "
 
 # 可选：额外软件包（取消注释启用）
@@ -76,7 +82,7 @@ PACKAGES_DISABLED="
 
 # 获取所有要安装的包（合并并清理空行）
 get_install_packages() {
-    echo "$PACKAGES_LUCI $PACKAGES_RPCD $PACKAGES_LANG_ZH $PACKAGES_TOOLS $PACKAGES_EXTRA" | tr '\n' ' ' | sed 's/#[^"]*//g' | tr -s ' '
+    echo "$PACKAGES_LUCI $PACKAGES_RPCD $PACKAGES_LANG_ZH $PACKAGES_NETWORK $PACKAGES_TOOLS $PACKAGES_LUCI_APPS $PACKAGES_EXTRA" | tr '\n' ' ' | sed 's/#[^"]*//g' | tr -s ' '
 }
 
 # 获取所有要禁用的包
