--- a/config/360t7.config
+++ b/config/360t7.config
@@ -10,6 +10,7 @@ CONFIG_KERNEL_BUILD_USER="builder"
 # CONFIG_KERNEL_PAGE_POOL is not set
 CONFIG_PACKAGE_btop=y
 CONFIG_PACKAGE_cgi-io=y
+CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_hostapd-common is not set
 CONFIG_PACKAGE_iperf3=y
 # CONFIG_PACKAGE_iw is not set
@@ -58,6 +59,7 @@ CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_rpcd-mod-ucode=y
 CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_ttyd=y
 # CONFIG_PACKAGE_trusted-firmware-a-mt7986-ram-ddr3 is not set
 # CONFIG_PACKAGE_trusted-firmware-a-mt7986-ram-ddr4 is not set
 # CONFIG_PACKAGE_trusted-firmware-a-mt7988-ram-comb is not set
