feat: 添加 ttyd 中文语言包
- luci-i18n-ttyd-zh-cn: ttyd 应用的中文界面翻译

--- a/config/360t7.config
+++ b/config/360t7.config
@@ -11,6 +11,7 @@ CONFIG_KERNEL_BUILD_USER="builder"
 CONFIG_PACKAGE_btop=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 # CONFIG_PACKAGE_hostapd-common is not set
 CONFIG_PACKAGE_iperf3=y
 # CONFIG_PACKAGE_iw is not set
