--- a/config/packages.conf
+++ b/config/packages.conf
@@ -38,6 +38,7 @@ PACKAGES_LANG_ZH="
     luci-i18n-base-zh-cn
     luci-i18n-firewall-zh-cn
     luci-i18n-package-manager-zh-cn
+    luci-i18n-ttyd-zh-cn
 "
 
 # 系统工具
