--- a/config/360t7.config
+++ b/config/360t7.config
@@ -12,6 +12,7 @@ CONFIG_PACKAGE_btop=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-hans=y
 # CONFIG_PACKAGE_hostapd-common is not set
 CONFIG_PACKAGE_iperf3=y
 # CONFIG_PACKAGE_iw is not set
