--- a/config/packages.conf
+++ b/config/packages.conf
@@ -39,6 +39,7 @@ PACKAGES_LANG_ZH="
     luci-i18n-firewall-zh-cn
     luci-i18n-package-manager-zh-cn
     luci-i18n-ttyd-zh-cn
+    luci-i18n-ttyd-zh-hans
 "
 
 # 系统工具
