简化 release 标题格式
- ImageBuilder: 从 'OpenWrt-ImageBuilder-版本-时间戳' 简化为 'ImageBuilder 版本'
- Firmware: 从 'OpenWrt-版本-commit' 简化为 'Firmware 版本'
- 保留重要信息（构建类型和 OpenWrt 版本号）

--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -162,7 +162,7 @@ jobs:
       id: create_release
       uses: ncipollo/release-action@v1.14.0
       with:
-        name: OpenWrt-${{ env.OPENWRT_VERSION_SHORT }}-${{ env.tag_name }}
+        name: Firmware ${{ env.OPENWRT_VERSION_SHORT }}
         allowUpdates: true
         tag: openwrt-${{ env.OPENWRT_VERSION_SHORT }}-${{ env.tag_name }}
         replacesArtifacts: true
