完善 .gitignore 文件，添加 OpenWrt 构建相关忽略规则
- 添加 openwrt/、output/、artifact/ 构建目录忽略
- 添加 imagebuilder/ 目录忽略
- 添加构建产物文件类型忽略（*.bin, *.img, *.itb, *.fip 等）
- 添加临时文件和日志文件忽略规则

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,36 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos
 
-openwrt
+### OpenWrt Build ###
+# OpenWrt source code directory
+openwrt/
+
+# Build output directory
+output/
+artifact/
+
+# ImageBuilder downloads and extracted files
+imagebuilder/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*.swo
+*~
+
+# Build artifacts
+*.bin
+*.img
+*.itb
+*.fip
+*.tar.gz
+*.ipk
+sha256sums
+config.buildinfo
+*.manifest
+*.json
+*.cdx.json
+
+# Log files
+*.log
